--- a/detail.html
+++ b/detail.html
@@ -1,182 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="img/book.svg" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <nav
-      class="w-full h-[100px] px-20 flex items-center justify-between border"
-    >
-      <a class="flex items-center gap-2" href="home.html"
-        ><img src="img/book.svg" alt="" />
-        <h1 class="font-Noto text-4xl font-semibold">Perpustakaan Kita</h1>
-      </a>
-      <div class="font-PT flex gap-10">
-        <a href="home.html" class="underline underline-offset-4">HOME</a>
-        <a href="about.html" class="hover:underline underline-offset-4"
-          >ABOUT</a
-        >
-        <a href="contact.html" class="hover:underline underline-offset-4"
-          >CONTACT</a
-        >
-        <button class="searchBtn"><img src="img/search.svg" alt="" /></button>
-      </div>
-    </nav>
-    <div
-      class="w-full h-[100px] px-20 border flex items-center justify-between searchbar hidden transition ease-in duration-300"
-    >
-      <form action="search.html">
-        <div class="flex gap-2">
-          <img src="img/search.svg" alt="" />
-          <input class="focus:outline-none" type="text" placeholder="Search" />
-        </div>
-      </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Detail</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet" />
+  <link rel="icon" href="img/book.svg" />
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-      <button class="closeBtn"><img src="img/close.svg" alt="" /></button>
+<body>
+  <nav class="w-full h-[100px] px-20 flex items-center justify-between border">
+    <a class="flex items-center gap-2" href="home.html"><img src="img/book.svg" alt="" />
+      <h1 class="font-Noto text-4xl font-semibold">Perpustakaan Kita</h1>
+    </a>
+    <div class="font-PT flex gap-10">
+      <a href="home.html" class="hover:underline underline-offset-4">HOME</a>
+      <a href="about.html" class="hover:underline underline-offset-4">ABOUT</a>
+      <a href="contact.html" class="hover:underline underline-offset-4">CONTACT</a>
+      <button class="searchBtn"><img src="img/search.svg" alt="" /></button>
     </div>
+  </nav>
+  <div
+    class="w-full h-[100px] px-20 border flex items-center justify-between searchbar hidden transition ease-in duration-300">
+    <form action="search.html">
+      <div class="flex gap-2">
+        <img src="img/search.svg" alt="" />
+        <input class="focus:outline-none" type="text" placeholder="Search" />
+      </div>
+    </form>
 
-    <div class="py-14 w-full flex justify-center gap-14">
-      <img
-        class="w-[305px] h-[454px] shadowCard"
-        src="img/siputih-cover.jpg"
-        alt=""
-      />
-      <div class="flex flex-col">
-        <div class="">
-          <h1 class="font-Noto text-[64px]">Si Putih</h1>
-          <span class="font-Lato font-light text-[#808080] text-[32px] mt-1"
-            >Tere Liye</span
-          >
-          <p class="w-[700px] font-Lato text-[#3F3F3F] mt-5">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-            mauris tincidunt pretium consequat molestie mi, laoreet mattis. Nibh
-            maecenas sed sed tincidunt commodo malesuada sit. Pellentesque in
-            molestie laoreet in non mauris elit. Egestas aliquet etiam quis
-            volutpat ipsum neque dui, arcu vitae. Dolor, nibh vel vestibulum
-            aliquet mattis potenti.
-          </p>
-        </div>
+    <button class="closeBtn"><img src="img/close.svg" alt="" /></button>
+  </div>
 
-        <div class="mt-10">
-          <h1 class="font-Lato text-[32px] font-semibold">Detail</h1>
-          <div class="mt-2 flex flex-col gap-2 flex-wrap h-[300px]">
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">Pages</h2>
-              <p class="font-Lato text-base">288</p>
-            </div>
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">Release</h2>
-              <p class="font-Lato text-base">2 Hune 2022</p>
-            </div>
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">ISBN</h2>
-              <p class="font-Lato text-base">0123456789</p>
-            </div>
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">Language</h2>
-              <p class="font-Lato text-base">Indonesia</p>
-            </div>
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">Publisher</h2>
-              <p class="font-Lato text-base">Gramedia Pustaka</p>
-            </div>
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">Weight</h2>
-              <p class="font-Lato text-base">0.175 kg</p>
-            </div>
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">Widht</h2>
-              <p class="font-Lato text-base">11.0 cm</p>
-            </div>
-            <div class="flex flex-col">
-              <h2 class="font-Lato text-2xl">Height</h2>
-              <p class="font-Lato text-base">18.0 cm</p>
-            </div>
+  <div class="py-14 w-full flex justify-center gap-14">
+    <img class="w-[305px] h-[454px] shadowCard" src="img/siputih-cover.jpg" alt="" />
+    <div class="flex flex-col">
+      <div class="">
+        <h1 class="font-Noto text-[64px]">Si Putih</h1>
+        <span class="font-Lato font-light text-[#808080] text-[32px] mt-1">Tere Liye</span>
+        <p class="w-[700px] font-Lato text-[#3F3F3F] mt-5">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+          mauris tincidunt pretium consequat molestie mi, laoreet mattis. Nibh
+          maecenas sed sed tincidunt commodo malesuada sit. Pellentesque in
+          molestie laoreet in non mauris elit. Egestas aliquet etiam quis
+          volutpat ipsum neque dui, arcu vitae. Dolor, nibh vel vestibulum
+          aliquet mattis potenti.
+        </p>
+      </div>
+
+      <div class="mt-10">
+        <h1 class="font-Lato text-[32px] font-semibold">Detail</h1>
+        <div class="mt-2 flex flex-col gap-2 flex-wrap h-[300px]">
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">Pages</h2>
+            <p class="font-Lato text-base">288</p>
+          </div>
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">Release</h2>
+            <p class="font-Lato text-base">2 Hune 2022</p>
+          </div>
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">ISBN</h2>
+            <p class="font-Lato text-base">0123456789</p>
+          </div>
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">Language</h2>
+            <p class="font-Lato text-base">Indonesia</p>
+          </div>
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">Publisher</h2>
+            <p class="font-Lato text-base">Gramedia Pustaka</p>
+          </div>
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">Weight</h2>
+            <p class="font-Lato text-base">0.175 kg</p>
+          </div>
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">Widht</h2>
+            <p class="font-Lato text-base">11.0 cm</p>
+          </div>
+          <div class="flex flex-col">
+            <h2 class="font-Lato text-2xl">Height</h2>
+            <p class="font-Lato text-base">18.0 cm</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div
-      class="m-auto w-[1064px] h-[480px] bg-[#F5F1ED] rounded-xl flex flex-col py-[50px] px-[57px]"
-    >
-      <h1 class="font-Noto text-5xl">Other Product</h1>
-      <div class="flex gap-12 mx-auto mt-[35px]">
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bumi-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bumi</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bulan-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bulan</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/matahari-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Matahari</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bintang-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bintang</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/komet-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Komet</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-      </div>
+  <div class="m-auto w-[1064px] h-[480px] bg-[#F5F1ED] rounded-xl flex flex-col py-[50px] px-[57px]">
+    <h1 class="font-Noto text-5xl">Other Product</h1>
+    <div class="flex gap-12 mx-auto mt-[35px]">
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/bumi-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Bumi</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/bulan-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Bulan</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/matahari-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Matahari</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/bintang-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Bintang</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/komet-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Komet</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
     </div>
-    <footer
-      class="mt-14 h-20 bg-[#eaeaea] flex items-center justify-center font-mono text-lg"
-    >
-      made with ♥ by Kita.
-    </footer>
-    <script src="script.js"></script>
-  </body>
+  </div>
+  <footer class="mt-14 h-20 bg-[#eaeaea] flex items-center justify-center font-mono text-lg">
+    made with ♥ by Kita.
+  </footer>
+  <script src="script.js"></script>
+</body>
+
 </html>
