--- a/search.html
+++ b/search.html
@@ -1,194 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Search</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="img/book.svg" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav
-      class="w-full h-[100px] px-20 flex items-center justify-between border"
-    >
-      <a class="flex items-center gap-2" href="home.html"
-        ><img src="img/book.svg" alt="" />
-        <h1 class="font-Noto text-4xl font-semibold">Perpustakaan Kita</h1>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Search</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet" />
+  <link rel="icon" href="img/book.svg" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <nav class="w-full h-[100px] px-20 flex items-center justify-between border">
+    <a class="flex items-center gap-2" href="home.html"><img src="img/book.svg" alt="" />
+      <h1 class="font-Noto text-4xl font-semibold">Perpustakaan Kita</h1>
+    </a>
+    <div class="font-PT flex gap-10">
+      <a href="home.html" class="hover:underline underline-offset-4">HOME</a>
+      <a href="about.html" class="hover:underline underline-offset-4">ABOUT</a>
+      <a href="contact.html" class="hover:underline underline-offset-4">CONTACT</a>
+      <button class="searchBtn"><img src="img/search.svg" alt="" /></button>
+    </div>
+  </nav>
+  <div
+    class="w-full h-[100px] px-20 border flex items-center justify-between searchbar hidden transition ease-in duration-300">
+    <form action="search.html">
+      <div class="flex gap-2">
+        <img src="img/search.svg" alt="" />
+        <input class="focus:outline-none" type="text" placeholder="Search" />
+      </div>
+    </form>
+
+    <button class="closeBtn"><img src="img/close.svg" alt="" /></button>
+  </div>
+
+  <div class="w-full h-[400px] flex flex-col items-center justify-center bg-[#F5F1ED]">
+    <h1 class="font-Noto text-[64px] font-semibold">Search</h1>
+    <hr class="w-[100px] border-black mt-7" />
+  </div>
+
+  <div class=" flex flex-col gap-10 py-20 items-center">
+    <div class="flex gap-12">
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/bumi-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Bumi</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
       </a>
-      <div class="font-PT flex gap-10">
-        <a href="home.html" class="underline underline-offset-4">HOME</a>
-        <a href="about.html" class="hover:underline underline-offset-4"
-          >ABOUT</a
-        >
-        <a href="contact.html" class="hover:underline underline-offset-4"
-          >CONTACT</a
-        >
-        <button class="searchBtn"><img src="img/search.svg" alt="" /></button>
-      </div>
-    </nav>
-    <div
-      class="w-full h-[100px] px-20 border flex items-center justify-between searchbar hidden transition ease-in duration-300"
-    >
-      <form action="search.html">
-        <div class="flex gap-2">
-          <img src="img/search.svg" alt="" />
-          <input class="focus:outline-none" type="text" placeholder="Search" />
-        </div>
-      </form>
-
-      <button class="closeBtn"><img src="img/close.svg" alt="" /></button>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/bulan-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Bulan</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/matahari-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Matahari</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/bintang-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Bintang</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/komet-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Komet</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/komet2-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Komet II</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
     </div>
 
-    <div
-      class="w-full h-[400px] flex flex-col items-center justify-center bg-[#F5F1ED]"
-    >
-      <h1 class="font-Noto text-[64px] font-semibold">Search</h1>
-      <hr class="w-[100px] border-black mt-7" />
+    <div class="flex gap-12">
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/lumpu-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Lumpu</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/selena-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Selena</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/ceros-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Ceros</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/nebula-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Nebula</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
+      <a href="detail.html" class="flex flex-col items-center">
+        <img class="w-[150px] h-[223px] shadowCard" src="img/siputih-cover.jpg" alt="" />
+        <h1 class="font-Noto text-2xl mt-2">Si Putih</h1>
+        <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
+          Tere Liye
+        </p>
+      </a>
     </div>
+  </div>
 
-    <div class=" flex flex-col gap-10 py-20 items-center">
-      <div class="flex gap-12">
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bumi-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bumi</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bulan-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bulan</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/matahari-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Matahari</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/bintang-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Bintang</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/komet-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Komet</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/komet2-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Komet II</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-      </div>
+  <footer class="h-20 bg-[#eaeaea] flex items-center justify-center font-mono text-lg">
+    made with ♥ by Kita.
+  </footer>
 
-      <div class="flex gap-12">
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/lumpu-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Lumpu</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/selena-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Selena</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/ceros-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Ceros</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/nebula-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Nebula</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-        <a href="detail.html" class="flex flex-col items-center">
-          <img
-            class="w-[150px] h-[223px] shadowCard"
-            src="img/siputih-cover.jpg"
-            alt=""
-          />
-          <h1 class="font-Noto text-2xl mt-2">Si Putih</h1>
-          <p class="font-Lato text-sm font-light mt-1 text-[#808080]">
-            Tere Liye
-          </p>
-        </a>
-      </div>
-    </div>
+  <script src="script.js"></script>
+</body>
 
-    <footer
-      class="h-20 bg-[#eaeaea] flex items-center justify-center font-mono text-lg"
-    >
-      made with ♥ by Kita.
-    </footer>
-
-    <script src="script.js"></script>
-  </body>
 </html>
